Fixed use of URL constructor